fixed scrollbar

--- a/src/additional-scss/_react-datatable-component-override.scss
+++ b/src/additional-scss/_react-datatable-component-override.scss
@@ -1,13 +1,11 @@
 @import "/variables";
 
 .data-display-table {
-  .sc-hGPBjI {
     margin-top: 1%;
     max-width: 100vw;
     max-height: 60vh;
     overflow-x: scroll;
     overflow-y: scroll;
-  }
   .rdt_Table {
     .epa-active-element {
       border: none !important;
